--- a/java/kflow/src/main/resources/application.properties
+++ b/java/kflow/src/main/resources/application.properties
@@ -2,13 +2,18 @@
 spring.application.name=kflow
 
 # Configuration de la source de données
-spring.datasource.url=jdbc:mysql://localhost:3306/kflow
+spring.datasource.url=jdbc:mysql://localhost:3306/kflow?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=your_password_here
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Configuration JPA et Hibernate
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+# Journaux pour le développement
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql=TRACE
