--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,38 +1,62 @@
 version: '3.8'
 
 services:
+  mysql:
+    image: mysql:8.0
+    container_name: kflow-mysql
+    environment:
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: kflow
+      MYSQL_USER: kflow
+      MYSQL_PASSWORD: ""
+    ports:
+      - "3307:3306"
+    volumes:
+      - mysql_data:/var/lib/mysql
+    networks:
+      - kflow-network
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
   backend:
     build: 
       context: ./kflow_back
       dockerfile: Dockerfile
+    container_name: kflow-backend
     ports:
       - "8080:8080"
     environment:
-      - SPRING_DATASOURCE_URL=jdbc:mysql://db:3306/kflow?createDatabaseIfNotExist=true
-      - SPRING_DATASOURCE_USERNAME=root
-      - SPRING_DATASOURCE_PASSWORD=root
+      - SPRING_DATASOURCE_URL=jdbc:mysql://mysql:3306/kflow?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false
+      - SPRING_DATASOURCE_USERNAME=kflow
+      - SPRING_DATASOURCE_PASSWORD=
+      - MYSQL_HOST=mysql
+      - MYSQL_PORT=3306
+      - MYSQL_DATABASE=kflow
+      - MYSQL_USER=kflow
+      - MYSQL_PASSWORD=
     depends_on:
-      - db
-    restart:
-      on_failure: always
+      - mysql
+    networks:
+      - kflow-network
+
   frontend:
-    build:
+    build: 
       context: ./kflow_front
       dockerfile: Dockerfile
+    container_name: kflow-frontend
     ports:
       - "80:80"
     depends_on:
       - backend
+    networks:
+      - kflow-network
 
-  db:
-    image: mysql:8.0
-    ports:
-      - "3307:3306"
-    environment:
-      - MYSQL_ROOT_PASSWORD=root
-      - MYSQL_DATABASE=kflow
-    volumes:
-      - mysql_data:/var/lib/mysql
+networks:
+  kflow-network:
+    driver: bridge
 
 volumes:
   mysql_data: 
