--- a/kflow_back/src/main/resources/application.properties
+++ b/kflow_back/src/main/resources/application.properties
@@ -1,12 +1,13 @@
 # Nom de l'application
 spring.application.name=kflow
 
-# Configuration de la source de données
-spring.datasource.url=jdbc:mysql://localhost:3306/kflow?createDatabaseIfNotExist=true
+# Database Configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/kflow?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+# JPA/Hibernate Configuration
 # Configuration JPA et Hibernate
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.hibernate.ddl-auto=update
