--- a/kflow_front/Dockerfile
+++ b/kflow_front/Dockerfile
@@ -1,14 +1,12 @@
-# Étape de build
 FROM node:18 AS build
 WORKDIR /app
 COPY package*.json ./
-RUN npm install
+RUN npm install --legacy-peer-deps
 COPY . .
 RUN npm run build
 
-# Étape de runtime
 FROM nginx:alpine
-COPY --from=build /app/dist/kflow/browser /usr/share/nginx/html
+COPY --from=build /app/dist/kflow /usr/share/nginx/html
 COPY nginx.conf /etc/nginx/conf.d/default.conf
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
