--- a/kflow_front/nginx.conf
+++ b/kflow_front/nginx.conf
@@ -5,14 +5,18 @@ server {
     root /usr/share/nginx/html;
     index index.html;
 
+    # Support for Angular routing
     location / {
         try_files $uri $uri/ /index.html;
     }
 
-    # Configuration pour le proxy vers le backend
-    location /api {
-        proxy_pass http://backend:8080;
+    # Proxy API requests to backend
+    location /api/ {
+        proxy_pass http://backend:8080/api/;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
         proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
+        proxy_cache_bypass $http_upgrade;
     }
 } 
