--- a/kflow_back/src/main/resources/application.properties
+++ b/kflow_back/src/main/resources/application.properties
@@ -18,3 +18,6 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql=TRACE
+
+rsa.public-key=classpath:jwt/public.pem
+rsa.private-key=classpath:jwt/private.pem
