--- a/kflow_front/package.json
+++ b/kflow_front/package.json
@@ -34,7 +34,9 @@
     "@angular/compiler-cli": "^17.1.0",
     "@types/jasmine": "~5.1.0",
     "@types/jest": "^29.5.14",
+    "@types/jsonwebtoken": "^9.0.9",
     "jasmine-core": "~5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
