--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,15 @@
-version: '3.8'
 
 services:
   mysql:
-    image: mysql:8.0
+    image: mysql:8.2.0
     container_name: kflow-mysql
     environment:
       MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: kflow
-      MYSQL_USER: kflow
+      MYSQL_USER: root
       MYSQL_PASSWORD: ""
     ports:
-      - "3307:3306"
+      - "3306:3306"
     volumes:
       - mysql_data:/var/lib/mysql
     networks:
@@ -35,7 +34,7 @@ services:
       - MYSQL_HOST=mysql
       - MYSQL_PORT=3306
       - MYSQL_DATABASE=kflow
-      - MYSQL_USER=kflow
+      - MYSQL_USER=root
       - MYSQL_PASSWORD=
     depends_on:
       - mysql
