--- a/kflow_front/nginx.conf
+++ b/kflow_front/nginx.conf
@@ -5,18 +5,27 @@ server {
     root /usr/share/nginx/html;
     index index.html;
 
-    # Support for Angular routing
+    # Support pour le routage Angular
     location / {
         try_files $uri $uri/ /index.html;
+        add_header Cache-Control "no-cache";
     }
 
-    # Proxy API requests to backend
+    # Proxy pour l'API
     location /api/ {
-        proxy_pass http://backend:8080/api/;
+        proxy_pass http://backend:8080/;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
         proxy_set_header Host $host;
         proxy_cache_bypass $http_upgrade;
     }
+
+    # Configuration des types MIME
+    include /etc/nginx/mime.types;
+    default_type application/octet-stream;
+
+    # Compression gzip
+    gzip on;
+    gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
 } 
