--- a/kflow_back/src/main/resources/application.properties
+++ b/kflow_back/src/main/resources/application.properties
@@ -1,23 +1,28 @@
 # Nom de l'application
 spring.application.name=kflow
 
-# Database Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/kflow?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false
-spring.datasource.username=root
-spring.datasource.password=
+# Profil actif par défaut (dev ou prod)
+spring.profiles.active=dev
+
+# Database Configuration (valeurs par défaut, peuvent être surchargées par profil)
+spring.datasource.url=${DB_URL:jdbc:mysql://localhost:3306/kflow?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true}
+spring.datasource.username=${DB_USERNAME:root}
+spring.datasource.password=${DB_PASSWORD:}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA/Hibernate Configuration
-# Configuration JPA et Hibernate
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
-# Journaux pour le développement
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type.descriptor.sql=TRACE
+# Logging par défaut (production)
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=false
+logging.level.org.hibernate.SQL=WARN
+logging.level.org.hibernate.type.descriptor.sql=WARN
+logging.level.org.springframework=INFO
+logging.level.kayak.freestyle.competition.kflow=INFO
 
+# JWT Configuration
 rsa.public-key=classpath:jwt/public.pem
 rsa.private-key=classpath:jwt/private.pem
