feat: integrate SonarQube for code quality analysis and coverage reporting

--- a/kflow_front/angular.json
+++ b/kflow_front/angular.json
@@ -115,7 +115,14 @@
               "@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [],
+            "codeCoverage": true,
+            "codeCoverageExclude": [
+              "src/environments/**",
+              "src/**/*.spec.ts",
+              "src/test.ts",
+              "src/polyfills.ts"
+            ]
           }
         }
       }
